# XOSD

./: AUTHORS  CHANGELOG  ChangeLog  HPUX.Install  INSTALL  Makefile  Makefile.am  Makefile.cln  Makefile.hp.broke  README  TODO  configure.ac  configure.in  libxosd.m4  osd_cat.1  osd_cat.c  testprog.c  xmms_osd.c  xosd.3  xosd.c  xosd.h  xosd.spec.in  xosd1020.c
current/: ChangeLog  TODO  configure.ac
current/man/: osd_cat.1
current/src/: Makefile.am  osd_cat.c
current/src/libxosd/: Makefile.am  xosd.c
current/src/xmms_plugin/: dlg_config.c  dlg_config_old.c  xmms_osd.c  xmms_osd.h
man/: Makefile.am  osd_cat.1  xosd.3  xosd_create.3  xosd_destroy.3  xosd_display.3  xosd_init.3  xosd_is_onscreen.3  xosd_set_bar_length.3  xosd_set_offset.3  xosd_wait_until_no_display.3
pixmaps/: Makefile.am
script/: xosd-config.in
src/: Makefile.am  osd_cat.c  testprog.c  xmms_osd.c  xosd.c  xosd.h
src/bmp_plugin/: bmp_osd.c  dlg_colour.c  dlg_config.c  dlg_config_old.c  dlg_font.c
src/libxosd/: Makefile.am  intern.h  xosd.c
src/xmms_plugin/: Makefile.am  dlg_colour.c  dlg_config.c  dlg_config_old.c  dlg_font.c  xmms_osd.c  xmms_osd.h
src/xmms_plugin_oldplugin/: Makefile.am  xmms_osd_oldplugin.c
