dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/testprog.c)
AM_INIT_AUTOMAKE(xosd, 1.0.0pre3)

PACKAGE=xosd
VERSION=1.0.0


AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AM_PROG_LIBTOOL
AC_PATH_XTRA

LIBS="$LIBS $X_PRE_LIBS $X_LIBS $X_EXTRA_LIBS"
CFLAGS="$CFLAGS $X_CFLAGS"
M4DATADIR="$datadir/aclocal"
AC_SUBST(M4DATADIR)

# version crud
LT_CURRENT=1
LT_REVISION=0
LT_AGE=0
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)


dnl Checks for libraries.
AM_PATH_GTK
dnl Replace `main' with a function in -lX11:
AC_CHECK_LIB(X11, main)
dnl Replace `main' with a function in -lXext:
AC_CHECK_LIB(Xext, main)
dnl Replace `main' with a function in -lXt:
AC_CHECK_LIB(Xt, main)
dnl Replace `main' with a function in -libs:
AC_CHECK_LIB(ibs, main)
dnl Replace `main' with a function in -lpthread:
AC_CHECK_LIB(pthread, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(strtol)

dnl Override where to place libxmms_xosd.so
AC_ARG_WITH(plugindir,
  [  --with-plugindir=<DIR>        Set the xmms plugin directory ],
  [ XMMS_PLUGIN_DIR="$withval" ],
  [ XMMS_PLUGIN_DIR="" ])

dnl Check for xmms-config; set the plugin directory
AC_PATH_PROG(xmms_config_script, xmms-config, "none")
if test "x$xmms_config_script" = "xnone" ; then
	echo "*** xmms-config script not found!  Do you have xmms-devel"
	echo "*** installed??"
	AC_MSG_ERROR(xmms-config not found)
else
	XMMS_CFLAGS=`$xmms_config_script --cflags`
	XMMS_LIBS=`$xmms_config_script --libs`
	AC_MSG_CHECKING(for xmms plugin directory)
	if test "x$XMMS_PLUGIN_DIR" = "x" ; then
		XMMS_PLUGIN_DIR=`$xmms_config_script --plugin-dir`
	fi
	AC_MSG_RESULT($XMMS_PLUGIN_DIR)
	AC_SUBST(XMMS_CFLAGS)
	AC_SUBST(XMMS_LIBS)
	AC_SUBST(XMMS_PLUGIN_DIR)
fi

dnl Define XOSD_VERSION
dnl XOSD_VERSION=${VERSION}
AC_DEFINE_UNQUOTED(XOSD_VERSION, "${VERSION}")

AC_OUTPUT([
Makefile
src/Makefile
macros/Makefile
man/Makefile
script/Makefile
script/xosd-config
xosd.spec
],
[chmod +x script/xosd-config])
